--- a/customer_churn_prediction_on_telco_data.ipynb
+++ b/customer_churn_prediction_on_telco_data.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyNJEWb/mXti7JVbV69E1dYc",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -959,6 +961,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/syedsaadali11/Customer-churn-prediction-On-telco-data/blob/main/customer_churn_prediction_on_telco_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Install required libraries\n",
@@ -969,7 +981,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GQspHw4C-tDT",
-        "outputId": "7468ea43-90b1-4d52-ce3f-4c35610909f9"
+        "outputId": "a95f2354-1826-4f3b-aae0-f25acbd7c234"
       },
       "execution_count": 1,
       "outputs": [
@@ -1054,12 +1066,21 @@
             "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.10/dist-packages (from anyio<4,>=3.1.0->jupyter-server<3,>=1.8->notebook-shim>=0.2.3->nbclassic>=0.4.7->notebook>=4.4.1->widgetsnbextension~=3.6.0->ipywidgets) (1.3.1)\n",
             "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<4,>=3.1.0->jupyter-server<3,>=1.8->notebook-shim>=0.2.3->nbclassic>=0.4.7->notebook>=4.4.1->widgetsnbextension~=3.6.0->ipywidgets) (1.2.2)\n",
             "Downloading jedi-0.19.2-py2.py3-none-any.whl (1.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m34.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m48.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: jedi\n",
             "Successfully installed jedi-0.19.2\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fztPbV5rJFBE"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
